# git-demo-day5

./: app.py  conflict.txt  final-conflict.txt  login.html  pyproject.toml  readme.md
.github/workflows/: main.yml  my-first-ci.yml  python-publish.yml  run-python.yml
