Ini, TOML
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_first_test_package_vaishali"
version = "0.0.1"
authors = [
  { name="Vaishali", email="test@example.com" },
]
description = "A simple package for testing DevOps pipeline"
readme = "README.md"
requires-python = ">=3.7"
